packer修好啦，具体看README.md

--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -1,139 +1,57 @@
 name: Packer
-
 on:
-
   push:
-
     branches:
-
       - main
+    paths:
+      - 'projects/**'
 
 jobs:
-
-  release:
-
-    name: Packer
-
+  build:
     runs-on: ubuntu-latest
 
     steps:
-
-      - name: Checkout Repository
-
+      - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Create Zipped Projects
+      - name: Create temporary directory
+        run: mkdir temp
 
-        run: |
+      - name: Copy 1.12.2 folder
+        run: cp -r projects/1.12.2 temp/1.12.2
 
-          mkdir zips
-
-          zip -r zips/1.12.2.zip projects/1.12.2/*
-
-          zip -r zips/1.16.zip projects/1.16/*
-
-          zip -r zips/1.18.zip projects/1.18/*
-
-          zip -r zips/1.19.zip projects/1.19/*
-
-      - name: Create timestamp
-
-        id: create_timestamp
-
-        run: echo "::set-output name=timestamp::$(date '+%Y%m%d%H%M%s')" 
-
-        shell: bash
-
-      - name: Create Release
-
-        id: create_release
-
-        uses: actions/create-release@v1
-
-        env:
-
-          GITHUB_TOKEN: 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
+      - name: Upload 1.12.2 artifact
+        uses: actions/upload-artifact@v2
         with:
+          name: VM汉化组模组汉化包1.12.2.zip
+          path: temp/1.12.2
 
-          tag_name: ${{ steps.create_timestamp.outputs.timestamp }} 
+      - name: Copy 1.16 folder
+        run: cp -r projects/1.16 temp/1.16
 
-          release_name: VM汉化组模组汉化包
-
-          body: |
-
-            支持1.12.2，1.16.5，1.18.2和1.19版本
-
-          draft: false
-
-          prerelease: false
-
-      - name: Upload Zipped Projects - 1.12.2
-
-        uses: actions/upload-release-asset@v1
-
-        env:
-
-          GITHUB_TOKEN: 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
+      - name: Upload 1.16 artifact
+        uses: actions/upload-artifact@v2
         with:
+          name: VM汉化组模组汉化包1.16.zip
+          path: temp/1.16
 
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+      - name: Copy 1.18 folder
+        run: cp -r projects/1.18 temp/1.18
 
-          asset_path: zips/1.12.2.zip
-
-          asset_name: VM汉化组模组汉化包1.12.2.zip
-
-          asset_content_type: application/zip
-
-      - name: Upload Zipped Projects - 1.16
-
-        uses: actions/upload-release-asset@v1
-
-        env:
-
-          GITHUB_TOKEN: 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
-
+      - name: Upload 1.18 artifact
+        uses: actions/upload-artifact@v2
         with:
+          name: VM汉化组模组汉化包1.18.zip
+          path: temp/1.18
 
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+      - name: Copy 1.19 folder
+        run: cp -r projects/1.19 temp/1.19
 
-          asset_path: zips/1.16.zip
-
-          asset_name: VM汉化组模组汉化包1.16.zip
-
-          asset_content_type: application/zip
-
-      - name: Upload Zipped Projects - 1.18
-
-        uses: actions/upload-release-asset@v1
-
-        env:
-
-          GITHUB_TOKEN: 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
-
+      - name: Upload 1.19 artifact
+        uses: actions/upload-artifact@v2
         with:
+          name: VM汉化组模组汉化包1.19.zip
+          path: temp/1.19
 
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-
-          asset_path: zips/1.18.zip
-
-          asset_name: VM汉化组模组汉化包1.18.zip
-
-          asset_content_type: application/zip
-
-      - name: Upload Zipped Projects - 1.19
-
-        uses: actions/upload-release-asset@v1
-
-        env:
-
-          GITHUB_TOKEN: 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
-
-        with:
-
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-
-          asset_path: zips/1.19.zip
-
-          asset_name: VM汉化组模组汉化包1.19.zip
-
-          asset_content_type: application/zip
+      - name: Clean up temporary directory
+        run: rm -rf temp
