--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -53,5 +53,11 @@ jobs:
           name: VM汉化组模组汉化包1.19.zip
           path: temp/1.19
 
+      - name: Upload 1.20 artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: VM汉化组模组汉化包1.20.zip
+          path: temp/1.20
+
       - name: Clean up temporary directory
         run: rm -rf temp
