--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -9,20 +9,20 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version-folder: [1.12.2, 1.16, 1.18, "1.19+"]
+        version-folder: ["1.12.2", "1.16", "1.18", "1.19+"]
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
 
       - name: Zip version ${{ matrix.version-folder }}
         run: |
           version="${{ matrix.version-folder }}"
           safe_name=$(echo "$version" | sed 's/+/plus/g')
+          echo "SAFE_NAME=$safe_name" >> $GITHUB_ENV
           zip -r "${safe_name}.zip" "projects/$version"
 
       - name: Upload artifact for version ${{ matrix.version-folder }}
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: VM汉化组模组汉化包${{ matrix.version-folder }}
-          path: |
-            ${{ matrix.version-folder }}.zip
+          path: ${{ env.SAFE_NAME }}.zip
